--- a/neetdivision/index.html
+++ b/neetdivision/index.html
@@ -8,15 +8,63 @@
 <meta property="og:description" content="Vee Dee wants to fly.">
 <meta property="og:locale"      content="ja_JP">
 <meta property="viewport" content="width=device-width, initial-scale=1">
-<title>NEETDIVISION</title>
+<title>NEET DIVISION</title>
 <link rel="icon" href="../favicon.ico" sizes="48x48" >
 <link rel="icon" href="../favicon.svg" sizes="any" type="image/svg+xml">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
 <link rel="manifest" href="../site.webmanifest" />
-<link rel="stylesheet" href="../style.css" />
 <style>
+  :root, html, body {
+    font-family: Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+  header, main, footer { margin: 10px; }
+  header {
+    border-bottom: 1px solid #ccc;
+    padding: 10px 0 20px;
+  }
+  h1 {
+    font-family: Helvetica, sans-serif;
+    font-weight: 100;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    b { font-weight: 900; }
+  }
+  iframe {
+    display: block;
+    margin: 0 auto;
+  }
+  footer {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    border-top: 1px solid #ccc;
+    padding: 20px 0 10px;
+
+    a, a:hover, a:visited, a:active {
+      color: inherit;
+      text-decoration: none;
+    }
+    > * {
+      padding: 1em;
+      flex: 1 1 0;
+      border: 1px solid #222;
+      border-radius: 0.6em;
+      &:last-child { text-align: right; }
+    }
+  }
 </style>
 <body>
-  <h1>WIP - NEETDIVISION ENTRY FORM</h1>
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfCxFpVXxy_qvkxXM_0puL5AfJ8ENmLO1RyeZTEBlNje-QUfA/viewform?usp=header" target="_new">Entry form</a>
+  <header>
+    <h1><b>NEET</b>DIVISION</h1>
+  </header>
+  <main>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfCxFpVXxy_qvkxXM_0puL5AfJ8ENmLO1RyeZTEBlNje-QUfA/viewform?embedded=true" width="640" height="1290" frameborder="0" marginheight="0" marginwidth="0">Loading ...</iframe>
+  </main>
+  <footer>
+    <a href="../">&#8592; vd.wtf</a>
+    <a target="_new" href="https://docs.google.com/spreadsheets/d/17OKOFXMYT_9vDe3uKQRAQj4IwLIPcP4em8VU_jXdCbU/edit?usp=sharing">Entries: Google Spreadsheet &#8594;</a>
+  </footer>
 </body>
