--- a/neetdivision/index.html
+++ b/neetdivision/index.html
@@ -57,13 +57,10 @@
       a, a:hover, a:visited, a:active {
         color: inherit;
         text-decoration: none;
-      }
-      > * {
         padding: 1em;
-        flex: 1 1 0;
         border: 1px solid #222;
         border-radius: 0.6em;
-        &:last-child { text-align: right; }
+        flex: 1 1 0;
       }
     }
 
@@ -127,8 +124,9 @@
   </main>
   <footer>
     <nav>
-      <a href="../">&#8592; vd.wtf</a>
-      <a target="_new" href="https://docs.google.com/spreadsheets/d/1KuDZFcgy97hOeVbQMe7PLgYig6IDRp24XCWeYcVZUTg/">Entries: Google Spreadsheet &#8594;</a>
+      <a href="../">vd.wtf</a>
+      <a target="_new" href="https://docs.google.com/forms/d/e/1FAIpQLSeHHF9E10j1-xMHZxQmOXHOtbJ6xNLRqVFMN3bWHStMq88y-Q/viewform">Raise your hand: Google Forms</a>
+      <a target="_new" href="https://docs.google.com/spreadsheets/d/1KuDZFcgy97hOeVbQMe7PLgYig6IDRp24XCWeYcVZUTg/">See entries: Google Sheets</a>
     </nav>
     <section class="credits">
       <address>
@@ -149,6 +147,7 @@
         <span class="discord">Discord ID: v__d__</span>
         <span class="link"><a target="_new" href="https://x.com/v__d__">X</a></span>
         <span class="link"><a target="_new" href="https://github.com/veedeeee">GitHub</a></span>
+        <span class="link"><a href="/">vd.wtf</a></span>
       </address>
       <p>And Thank you all of contributors who from Discord community and GitHub. tyfp!</p>
     </section>
