--- a/neetdivision/index.html
+++ b/neetdivision/index.html
@@ -302,8 +302,9 @@
 
             return; // continue
           }
+          const dateTime = row[sentAtIndex].split(' ');
           result.push({
-            sentAt: new Date(row[sentAtIndex].replaceAll('/', '-').replace(' ', 'T') + '.000+09:00'),
+            sentAt: new Date(`${dateTime[0].replace('/', '-')}T${('0' + dateTime[1]).substr(-8)}.000+09:00`),
             discordId: row[discordIdIndex],
             summonerName: row[summonerNameIndex],
             tagLine: row[tagLineIndex],
